unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/ERS_Case_to_Work_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ERS Case to Work Type Mapping</label>
    <pluralLabel>ERS Case to Work Type Mappings</pluralLabel>
</CustomObject>