unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Appointment_Requested__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Requested</label>
    <type>Checkbox</type>
</CustomField>