unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Battery_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Battery_Service_Type__c</fullName>
    <label>Battery Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battery Service</fullName>
                <default>true</default>
                <label>Battery Service</label>
            </value>
            <value>
                <fullName>Jumpstart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>