unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Breakdown_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Location_City__c</fullName>
    <label>Breakdown Location City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>