unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/BSP_Available__c.field-meta.xml
<CustomField>
    <fullName>BSP_Available__c</fullName>
    <label>BSP Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>