unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Case_to_Work_Type_Mapping_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_to_Work_Type_Mapping_Status__c</fullName>
    <label>Case to Work Type Mapping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>