unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Enter_Home_during_Lockout__c.field-meta.xml
<CustomField>
    <fullName>Enter_Home_during_Lockout__c</fullName>
    <inlineHelpText>Legal Right</inlineHelpText>
    <label>Enter Home during Lockout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>