unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/ERS_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>ERS_Event_Type__c</fullName>
    <label>ERS Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident assist</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>RAP</fullName>
            </value>
            <value>
                <fullName>Tow To Go</fullName>
            </value>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Motor Club</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>