unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <label>Gross Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 -1000</fullName>
            </value>
            <value>
                <fullName>1000 - 2000</fullName>
            </value>
            <value>
                <fullName>2000 - 3000</fullName>
            </value>
            <value>
                <fullName>3000 - 4000</fullName>
            </value>
            <value>
                <fullName>4000 - 5000</fullName>
            </value>
            <value>
                <fullName>5000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>