unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Location_of_Keys__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Keys__c</fullName>
    <label>Location of Keys</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keys in Passenger Compartment</fullName>
            </value>
            <value>
                <fullName>Keys Locked in Trunk - Release</fullName>
            </value>
            <value>
                <fullName>Keys Locked in Trunk - No Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>