unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Member_Needs_Air__c.field-meta.xml
<CustomField>
    <fullName>Member_Needs_Air__c</fullName>
    <label>Member needs Air</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>