unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/PCC_DISP_CODE__c.field-meta.xml
<CustomField>
    <fullName>PCC_DISP_CODE__c</fullName>
    <label>PCC DISP CODE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>L101</fullName>
            </value>
            <value>
                <fullName>L102</fullName>
            </value>
            <value>
                <fullName>L104</fullName>
            </value>
            <value>
                <fullName>L301</fullName>
            </value>
            <value>
                <fullName>L302</fullName>
                <isActive>false</isActive>
                <label>L302</label>
            </value>
            <value>
                <fullName>L303</fullName>
            </value>
            <value>
                <fullName>L304</fullName>
            </value>
            <value>
                <fullName>L402</fullName>
            </value>
            <value>
                <fullName>L403</fullName>
            </value>
            <value>
                <fullName>L509</fullName>
            </value>
            <value>
                <fullName>L701</fullName>
            </value>
            <value>
                <fullName>L702</fullName>
            </value>
            <value>
                <fullName>L704</fullName>
            </value>
            <value>
                <fullName>L790</fullName>
            </value>
            <value>
                <fullName>L801</fullName>
            </value>
            <value>
                <fullName>L802</fullName>
            </value>
            <value>
                <fullName>L803</fullName>
            </value>
            <value>
                <fullName>L804</fullName>
                <isActive>false</isActive>
                <label>L804</label>
            </value>
            <value>
                <fullName>L806</fullName>
            </value>
            <value>
                <fullName>L807</fullName>
            </value>
            <value>
                <fullName>L890</fullName>
            </value>
            <value>
                <fullName>T180</fullName>
                <isActive>false</isActive>
                <label>T180</label>
            </value>
            <value>
                <fullName>T280</fullName>
            </value>
            <value>
                <fullName>T381</fullName>
            </value>
            <value>
                <fullName>T382</fullName>
            </value>
            <value>
                <fullName>T580</fullName>
            </value>
            <value>
                <fullName>T581</fullName>
            </value>
            <value>
                <fullName>T582</fullName>
            </value>
            <value>
                <fullName>T680</fullName>
            </value>
            <value>
                <fullName>T906</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>