unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>