unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Special_Equipment_Selection__c.field-meta.xml
<CustomField>
    <fullName>Special_Equipment_Selection__c</fullName>
    <label>Special Equipment Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flatbed</fullName>
            </value>
            <value>
                <fullName>Wheel Lift</fullName>
            </value>
            <value>
                <fullName>Wheel Lift with Dollies</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>