unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/T_Code__c.field-meta.xml
<CustomField>
    <fullName>T_Code__c</fullName>
    <label>T-Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1B</fullName>
            </value>
            <value>
                <fullName>7B</fullName>
            </value>
            <value>
                <fullName>7H</fullName>
            </value>
            <value>
                <fullName>7I</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>T5</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6B</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>6A</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>3B</fullName>
                <isActive>false</isActive>
                <label>3B</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
            <value>
                <fullName>7A</fullName>
                <isActive>false</isActive>
                <label>7A</label>
            </value>
            <value>
                <fullName>9A</fullName>
                <isActive>false</isActive>
                <label>9A</label>
            </value>
            <value>
                <fullName>9D</fullName>
                <isActive>false</isActive>
                <label>9D</label>
            </value>
            <value>
                <fullName>9E</fullName>
                <isActive>false</isActive>
                <label>9E</label>
            </value>
            <value>
                <fullName>9F</fullName>
                <isActive>false</isActive>
                <label>9F</label>
            </value>
            <value>
                <fullName>9I</fullName>
                <isActive>false</isActive>
                <label>9I</label>
            </value>
            <value>
                <fullName>T1</fullName>
                <isActive>false</isActive>
                <label>T1</label>
            </value>
            <value>
                <fullName>T6</fullName>
                <isActive>false</isActive>
                <label>T6</label>
            </value>
            <value>
                <fullName>T6O</fullName>
                <isActive>false</isActive>
                <label>T6O</label>
            </value>
            <value>
                <fullName>T7</fullName>
                <isActive>false</isActive>
                <label>T7</label>
            </value>
            <value>
                <fullName>T8</fullName>
                <isActive>false</isActive>
                <label>T8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>