unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Total_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Total_Mileage__c</fullName>
    <label>Total Mileage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>