unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Tow_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tow_Request_Reason__c</fullName>
    <label>Tow Request Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Alternator</fullName>
            </value>
            <value>
                <fullName>Belt</fullName>
            </value>
            <value>
                <fullName>Brakes</fullName>
            </value>
            <value>
                <fullName>Broken Windshield</fullName>
            </value>
            <value>
                <fullName>Collision - Under AAA Insurance</fullName>
            </value>
            <value>
                <fullName>Collision - Under Membership</fullName>
            </value>
            <value>
                <fullName>Fuel Pump</fullName>
            </value>
            <value>
                <fullName>Hose</fullName>
            </value>
            <value>
                <fullName>Overheat</fullName>
            </value>
            <value>
                <fullName>Stalled While Driving</fullName>
            </value>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>No Spare Tires</fullName>
            </value>
            <value>
                <fullName>Fuel Type of Diesel</fullName>
            </value>
            <value>
                <fullName>Fuel Type of Electric</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>Wont Start</fullName>
                <label>Won&#39;t Start</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Collision</fullName>
                <isActive>false</isActive>
                <label>Collision</label>
            </value>
            <value>
                <fullName>Fuel Type of EV</fullName>
                <isActive>false</isActive>
                <label>Fuel Type of EV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>