unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Type_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Issue__c</fullName>
    <label>Type of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>Tow Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>