unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Vehicle_Drivetrain__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Drivetrain__c</fullName>
    <label>Vehicle Drivetrain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2WD</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
            <value>
                <fullName>AWD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>