unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Vehicle_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Fuel_Type__c</fullName>
    <label>Vehicle Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
                <label>Gasoline</label>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>