unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Vehicle_Lockout_Reason__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Lockout_Reason__c</fullName>
    <label>Vehicle Lockout Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locked in the vehicle</fullName>
                <default>true</default>
                <label>Locked in the vehicle</label>
            </value>
            <value>
                <fullName>My key is broken or lost</fullName>
            </value>
            <value>
                <fullName>My key won&#39;t turn in the ignition</fullName>
            </value>
            <value>
                <fullName>My key won&#39;t unlock the door</fullName>
            </value>
            <value>
                <fullName>I don&#39;t know</fullName>
            </value>
            <value>
                <fullName>Keys Locked in Trunk - No Release</fullName>
            </value>
            <value>
                <fullName>Key Lost</fullName>
            </value>
            <value>
                <fullName>Key Broken</fullName>
            </value>
            <value>
                <fullName>Key Won&#39;t Turn in Ignition</fullName>
            </value>
            <value>
                <fullName>Keys in Trunk No Trunk Release</fullName>
            </value>
            <value>
                <fullName>Miscellaneous / Other</fullName>
            </value>
            <value>
                <fullName>Keys Locked in Trunk/Trunk Release</fullName>
            </value>
            <value>
                <fullName>Frozen Doors</fullName>
            </value>
            <value>
                <fullName>Frozen Locks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>