unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/fields/Won_t_Go_in_Gear__c.field-meta.xml
<CustomField>
    <fullName>Won_t_Go_in_Gear__c</fullName>
    <label>Won&#39;t Go in Gear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>