unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BSP_Available__c</columns>
    <columns>Priority__c</columns>
    <columns>Service_Type__c</columns>
    <columns>T_Code__c</columns>
    <columns>Case_to_Work_Type_Mapping_Status__c</columns>
    <columns>PCC_DISP_CODE__c</columns>
    <columns>Work_Type__c</columns>
    <columns>Vehicle_Fuel_Type__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Total_Mileage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Details</label>
    <language>en_US</language>
</ListView>