unpackaged/main/default/objects/ERS_Case_to_Work_Type_Mapping__mdt/listViews/LocksmithView.listView-meta.xml
<ListView>
    <fullName>LocksmithView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>T_Code__c</columns>
    <columns>Work_Type__c</columns>
    <columns>PCC_DISP_CODE__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Vehicle_Type__c</columns>
    <columns>Case_to_Work_Type_Mapping_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>Locksmith</value>
    </filters>
    <label>LocksmithView</label>
    <language>en_US</language>
</ListView>